--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,7 @@
 // clay_2
 // @theme-primary:    #E7DCD8;
 // @theme-success:    #E89A63;
+//Other accent: FF9800
 
 //jars
 @theme-primary:    @lightPrimaryColor;
@@ -12,7 +13,7 @@
 @primaryColor:       #607D8B;
 @lightPrimaryColor:  #CFD8DC;
 @textPrimaryColor:   #FFFFFF;
-@accentColor:        #FF9800;
+@accentColor:        #E89A63;
 @primaryTextColor:   #212121;
 @secondaryTextColor: #757575;
 @dividerColor:       #BDBDBD;
