--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -40,8 +40,9 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
-    font-family: FontAwesome;
+    // content: "\f005";
+    // font-family: FontAwesome;
+		background-image: url('img/logo.svg');
     display: inline-block;
     position: relative;
     top: -0.8em;
@@ -74,6 +75,11 @@ hr.star-primary:after {
 .balance-text {
   text-align: center;
 }
+
+nav div img {
+	width: 50px;
+}
+
 
 header {
 	text-align: center;
@@ -287,7 +293,7 @@ header {
 }
 
 section {
-    padding: 100px 0;
+    padding: 60px 0;
     h2 {
     	margin: 0;
     	font-size: 2em;
@@ -426,13 +432,13 @@ form .row:first-child .floating-label-form-group {
 }
 
 footer {
+	background-color: @theme-success;
 	color: white;
 	h3 {
 		margin-bottom: 30px;
 	}
 	.footer-above {
 		padding-top: 50px;
-		background-color: @theme-primary;
 	}
 	.footer-col {
 		margin-bottom: 50px;
