--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -82,6 +82,7 @@ nav div img {
 
 
 header {
+	width: 100%;
 	text-align: center;
 	background: @theme-success;
 	color: @textPrimaryColor;
@@ -269,6 +270,18 @@ header {
       }
     }
   }
+}
+
+#mywell {
+	p {
+		padding-bottom: 20px;
+	}
+
+	h2 {
+		padding-top: 50px;
+		padding-bottom: 50px;
+		text-align: center;
+	}
 }
 
 @media(min-width:768px) {
