--- a/less/variables.less
+++ b/less/variables.less
@@ -30,3 +30,4 @@
 @gray-lighter:     lighten(@gray-base, 93.5%); // #eee
 
 @banner-image:     url("../img/chalk.jpg");
+@mywell-image:     url("../img/mywell.jpg");
