--- a/less/variables.less
+++ b/less/variables.less
@@ -13,7 +13,7 @@
 @primaryColor:       #607D8B;
 @lightPrimaryColor:  #CFD8DC;
 @textPrimaryColor:   #FFFFFF;
-@accentColor:        #E89A63;
+@accentColor:        #CDB59B;
 @primaryTextColor:   #212121;
 @secondaryTextColor: #757575;
 @dividerColor:       #BDBDBD;
