work on mywell project page

--- a/site/themes/hugo-elate-theme/layouts/page/project.html
+++ b/site/themes/hugo-elate-theme/layouts/page/project.html
@@ -10,7 +10,9 @@
     <body>
         {{ partial "nav.html" .}}
 
-		     <h2>This is a project page template</h2>
+         <div class="markdown">
+              {{ .Content }}
+        </div>
 
         {{ if .Site.Params.footer.enable }}
         	{{ partial "footer.html" .}}
