working on new partials for project page

--- a/site/themes/hugo-elate-theme/layouts/page/project.html
+++ b/site/themes/hugo-elate-theme/layouts/page/project.html
@@ -9,15 +9,16 @@
     </head>
     <body>
         {{ partial "nav.html" .}}
+        {{ partial "project_hero.html" .}}
+        <!-- {{ partial "services.html" .}} -->
+        <!-- {{ partial "testimonials.html" .}} -->
 
          <div class="markdown">
               {{ .Content }}
         </div>
-
-        {{ if .Site.Params.footer.enable }}
-        	{{ partial "footer.html" .}}
-        {{ end }}
-
+      	<!-- {{ partial "counters.html" .}} -->
+        <!-- {{ partial "contact_short.html" .}} -->
+      	{{ partial "footer.html" .}}
         {{ partial "js.html" .}}
     </body>
 </html>
