--- a/site/themes/hugo-elate-theme/layouts/partials/project/contact_short.html
+++ b/site/themes/hugo-elate-theme/layouts/partials/project/contact_short.html
@@ -2,10 +2,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="">{{ with .Site.Params.contact.title }}{{ . | markdownify }}{{ end }}</h2>
+					<h2 class="">{{ with .Params.contact.title }}{{ . | markdownify }}{{ end }}</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext ">
-							<h3>{{ with .Site.Params.contact.description }}{{ . | markdownify }}{{ end }}</h3>
+							<h3>{{ with .Params.contact.description }}{{ . | markdownify }}{{ end }}</h3>
 						</div>
 					</div>
 				</div>
