--- a/site/themes/hugo-elate-theme/layouts/page/project.html
+++ b/site/themes/hugo-elate-theme/layouts/page/project.html
@@ -11,12 +11,21 @@
         {{ partial "nav.html" .}}
         {{ partial "project/hero.html" .}}
         {{ partial "project/features.html" .}}
+        <div class="container">
+    			<div class="text-wrap">
+    				<div class="text-inner">
+    					<div class="row">
+    						<div class="col-md-10 col-md-offset-1">
+                  <div class="markdown project-content">
+                       {{ .Content }}
+                 </div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+    		</div>
         {{ partial "project/testimonials.html" .}}
-
-         <div class="markdown">
-              {{ .Content }}
-        </div>
-      	{{ partial "project/counters.html" .}}
+        {{ partial "project/counters.html" .}}
         {{ partial "project/contact_short.html" .}}
       	{{ partial "footer.html" .}}
         {{ partial "js.html" .}}
