--- a/site/themes/hugo-elate-theme/layouts/partials/project/features.html
+++ b/site/themes/hugo-elate-theme/layouts/partials/project/features.html
@@ -1,4 +1,4 @@
-<section id="fh5co-features" data-section="features">
+<section id="fh5co-services" data-section="features">
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-heading text-left">
