--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -21,6 +21,13 @@
 /* --main-color-2: #AB4E68; */
 
 
+/* project stuff  */
+.project-content img {
+  max-width: 100%
+}
+
+
+/* default */
 
 
 body {
@@ -397,7 +404,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   right: 0;
   z-index: 2;
-  opacity: .9;
+  opacity: .7;
   -webkit-backface-visibility: hidden;
   background-color: #E89A63;
   /* IE9, iOS 3.2+ */
@@ -472,7 +479,8 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   margin-top: -150px;
   z-index: 10;
-  padding-bottom: 7em;
+  /* this was a little too much */
+  /* padding-bottom: 7em; */
 }
 @media screen and (max-width: 768px) {
   #fh5co-intro {
