--- a/site/themes/hugo-elate-theme/layouts/page/project.html
+++ b/site/themes/hugo-elate-theme/layouts/page/project.html
@@ -8,10 +8,10 @@
         {{ partial "head.html" .}}
     </head>
     <body>
-        {{ partial "nav.html" .}}
+        {{ partial "project/nav.html" .}}
         {{ partial "project/hero.html" .}}
         {{ partial "project/features.html" .}}
-        <div class="container">
+        <section id="fh5co-content" class="container" data-section="content">
     			<div class="text-wrap">
     				<div class="text-inner">
     					<div class="row">
