fix layout issue

--- a/site/themes/hugo-elate-theme/layouts/page/project.html
+++ b/site/themes/hugo-elate-theme/layouts/page/project.html
@@ -23,7 +23,7 @@
     					</div>
     				</div>
     			</div>
-    		</div>
+    		</section>
         {{ partial "project/testimonials.html" .}}
         {{ partial "project/counters.html" .}}
         {{ partial "project/contact_short.html" .}}
