--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,9 @@
 /* --main-color-2: #AB4E68; */
 
 
+.project-content img {
+  max-width: 100%
+}
 
 
 body {
@@ -397,7 +400,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   right: 0;
   z-index: 2;
-  opacity: .9;
+  opacity: .7;
   -webkit-backface-visibility: hidden;
   background-color: #E89A63;
   /* IE9, iOS 3.2+ */
@@ -472,7 +475,8 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   margin-top: -150px;
   z-index: 10;
-  padding-bottom: 7em;
+  /* this was a little too much */
+  /* padding-bottom: 7em; */
 }
 @media screen and (max-width: 768px) {
   #fh5co-intro {
@@ -712,6 +716,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   width: 100%;
   padding: 9em 0 10em 0;
+  opacity: 0.5;
 }
 @media screen and (max-width: 768px) {
   #fh5co-counters {
