--- a/site/themes/hugo-elate-theme/layouts/partials/work.html
+++ b/site/themes/hugo-elate-theme/layouts/partials/work.html
@@ -22,7 +22,8 @@
 					{{else}}
 						<a href="images/{{ .img }}" target="_blank" class="fh5co-project-item image-popup">
 					{{ end }}
-						<img src="images/{{ .img }}" alt="{{ .alt }}" class="img-responsive">
+						<div class="work-bg-image" style="background-image: url(images/{{ .img }});"></div>
+						<!-- <img src="images/{{ .img }}" alt="{{ .alt }}" class="img-responsive"> -->
 						<div class="fh5co-text">
 						<h2>{{ .title }}</h2>
 						<span>{{ .subtitle }}</span>
@@ -30,7 +31,7 @@
 					</a>
 				</div>
 
-				<div class="clearfix visible-sm-block"></div>
+				<!-- <div class="clearfix visible-sm-block"></div> -->
 			{{ end }}
 			</div>
 			<div class="row">
