--- a/site/themes/hugo-elate-theme/static/css/style.css
+++ b/site/themes/hugo-elate-theme/static/css/style.css
@@ -1426,4 +1426,24 @@ h1, h2, h3, h4, h5, h6 {
   animation-fill-mode: both;
 }
 
+#fh5co-intro .row {
+  display: flex;
+}
+
+#fh5co-intro .fh5co-block {
+  display: flex;
+}
+
+#fh5co-intro .fh5co-text {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#fh5co-intro p:last-of-type {
+  margin-top: auto;
+}
+
 /*# sourceMappingURL=style.css.map */
